added more examples